# treewidth-heuristic-using-clique-graphs-benchmarks

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
benchmark-suites/: Cargo.toml
benchmark-suites/src/: lib.rs
benchmark_results/: EffectOfIncreasingNOnSmallPartialKTrees.txt  FillWhileBuildingTreeAndMinimizeBagSize.txt  MinimumSpanningTreeUnboundedAndBounded_K_Tree_benchmark.txt
benchmark_results/k_tree_results/: comparison_of_bounded_clique_heuristics_k-tree_average_bound_2024-07-31T22:13:13+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_average_bound_2024-08-07T08:56:40+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_average_runtime_2024-07-31T12:54:59+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_average_runtime_2024-07-31T22:13:13+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_average_runtime_2024-08-07T08:56:40+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_per_run_bound_2024-07-31T12:54:59+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_per_run_bound_2024-07-31T22:13:13+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_per_run_bound_2024-08-07T08:56:40+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_per_run_runtime_2024-07-31T22:13:13+02:00_multithreaded.csv  comparison_of_bounded_clique_heuristics_k-tree_per_run_runtime_2024-08-07T08:56:40+02:00_multithreaded.csv  comparison_of_combined_edge_weights_k-tree_average_bound_2024-06-28T22:51:23+02:00_multithreaded.csv  comparison_of_combined_edge_weights_k-tree_average_bound_2024-07-02T15:54:29+02:00_multithreaded.csv  comparison_of_combined_edge_weights_k-tree_average_runtime_2024-06-28T22:51:23+02:00_multithreaded.csv  comparison_of_combined_edge_weights_k-tree_average_runtime_2024-07-02T15:54:29+02:00_multithreaded.csv  comparison_of_combined_edge_weights_k-tree_per_run_bound_2024-06-28T22:51:23+02:00_multithreaded.csv  comparison_of_combined_edge_weights_k-tree_per_run_bound_2024-07-02T15:54:29+02:00_multithreaded.csv  comparison_of_combined_edge_weights_k-tree_per_run_runtime_2024-06-28T22:51:23+02:00_multithreaded.csv  comparison_of_combined_edge_weights_k-tree_per_run_runtime_2024-07-02T15:54:29+02:00_multithreaded.csv  comparison_of_edge_weights_k-tree_average_bound_2024-06-28T22:51:23+02:00_multithreaded.csv  comparison_of_edge_weights_k-tree_average_bound_2024-07-02T15:54:29+02:00_multithreaded.csv  comparison_of_edge_weights_k-tree_average_runtime_2024-06-28T22:51:23+02:00_multithreaded.csv  comparison_of_edge_weights_k-tree_average_runtime_2024-07-02T15:54:29+02:00_multithreaded.csv  comparison_of_edge_weights_k-tree_per_run_bound_2024-06-28T22:51:23+02:00_multithreaded.csv  comparison_of_edge_weights_k-tree_per_run_bound_2024-07-02T15:54:29+02:00_multithreaded.csv  comparison_of_edge_weights_k-tree_per_run_runtime_2024-06-28T22:51:23+02:00_multithreaded.csv  comparison_of_edge_weights_k-tree_per_run_runtime_2024-07-02T15:54:29+02:00_multithreaded.csv  comparison_of_exotic_spanning_tree_construction_k-tree_average_bound_2024-07-26T09:56:56+02:00_multithreaded.csv  comparison_of_exotic_spanning_tree_construction_k-tree_average_bound_2024-08-05T11:57:29+02:00_multithreaded.csv  comparison_of_exotic_spanning_tree_construction_k-tree_average_runtime_2024-07-26T09:56:56+02:00_multithreaded.csv  comparison_of_exotic_spanning_tree_construction_k-tree_average_runtime_2024-08-05T11:57:29+02:00_multithreaded.csv  comparison_of_exotic_spanning_tree_construction_k-tree_per_run_bound_2024-07-26T09:56:56+02:00_multithreaded.csv  comparison_of_exotic_spanning_tree_construction_k-tree_per_run_bound_2024-08-05T11:57:29+02:00_multithreaded.csv  comparison_of_exotic_spanning_tree_construction_k-tree_per_run_runtime_2024-07-26T09:56:56+02:00_multithreaded.csv  (+47 more)
dimacs-benchmarks/: Cargo.toml
dimacs-benchmarks/benchmark_results/: dimacs_results.txt
dimacs-benchmarks/dimacs_graphs/color/: flat1000_50_0.col.b  flat1000_60_0.col.b  flat1000_76_0.col.b  flat300_20_0.col.b  flat300_26_0.col.b  flat300_28_0.col.b  fpsol2.i.1.col  fpsol2.i.2.col  fpsol2.i.3.col  inithx.i.1.col  inithx.i.2.col  inithx.i.3.col  le450_15b.col  le450_15c.col_sorted_out  le450_15d.col_sorted_out  le450_25a.col  le450_25b.col  le450_25c.col_sorted_out  le450_25d.col_sorted_out  le450_5a.col  le450_5b.col  le450_5c.col  le450_5d.col  mulsol.i.1.col  mulsol.i.2.col  mulsol.i.3.col  mulsol.i.4.col  mulsol.i.5.col
dimacs-benchmarks/src/: lib.rs  main.rs
greedy-degree-fill-in-heuristic/: Cargo.toml
greedy-degree-fill-in-heuristic/src/: lib.rs
grid-benchmark/: Cargo.toml
grid-benchmark/src/: main.rs
k-tree-benchmarks/: Cargo.toml
k-tree-benchmarks/benchmark_results/: k_tree_results.txt
k-tree-benchmarks/benchmark_results/visualizations/: 0_clique_graph_.dot  0_result_graph_.dot  0_result_graph_before_filling_.dot  0_result_graph_node_indices_.dot  0_starting_graph_.dot  10_clique_graph_.dot  10_result_graph_.dot  10_result_graph_before_filling_.dot  10_result_graph_node_indices_.dot  10_starting_graph_.dot  11_clique_graph_.dot  11_result_graph_before_filling_.dot  11_result_graph_node_indices_.dot  11_starting_graph_.dot  12_clique_graph_.dot  12_result_graph_.dot  12_result_graph_before_filling_.dot  12_result_graph_node_indices_.dot  12_starting_graph_.dot  13_clique_graph_.dot  13_result_graph_.dot  13_result_graph_before_filling_.dot  13_result_graph_node_indices_.dot  13_starting_graph_.dot  14_clique_graph_.dot  14_result_graph_.dot  14_result_graph_before_filling_.dot  14_result_graph_node_indices_.dot  14_starting_graph_.dot  15_clique_graph_.dot  15_result_graph_.dot  15_result_graph_before_filling_.dot  15_result_graph_node_indices_.dot  15_starting_graph_.dot  16_clique_graph_.dot  16_result_graph_.dot  16_result_graph_node_indices_.dot  16_starting_graph_.dot  17_clique_graph_.dot  17_result_graph_.dot  (+428 more)
k-tree-benchmarks/src/: main.rs
