[workspace]

members = [
    "dimacs-benchmarks",
    "k-tree-benchmarks",
    "greedy-degree-fill-in-heuristic",
    "benchmark-suites",
]
resolver = "2"

# Optimization in debug mode for own code
[profile.dev]
opt-level = 1

# Optimiziation in debug mode for dependencies
[profile.dev.package."*"]
opt-level = 3