[workspace]

members = [
    "greedy-degree-fill-in-heuristic",
    "benchmark-suites",
    "k-tree-benchmarks",
    "dimacs-benchmarks",
    "grid-benchmark"
]
resolver = "2"

# Optimization in debug mode for own code
[profile.dev]
opt-level = 1

# Optimiziation in debug mode for dependencies
[profile.dev.package."*"]
opt-level = 3