[package]
name = "benchmark-suites"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["Raoul Luque <raoulsluque@gmail.com>"]
description = "A collection of functions and constants used for different benchmarks"
repository = "https://github.com/RaoulLuque/treewidth-heuristic-clique-graph-benchmarks"

[dependencies]
treewidth-heuristic-using-clique-graphs = { git = "https://github.com/RaoulLuque/treewidth-heuristic-using-clique-graphs"}
petgraph = "0.6.4"
csv = "1.3.0"
log = "0.4.21"
chrono = "0.4.38"
