[package]
name = "dimacs-benchmarks"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["Raoul Luque <raoulsluque@gmail.com>"]
description = "Benchmarks for a heuristic for calculating an upper bound on treewidth of graphs using clique-graphs using dimacs graphs"
repository = "https://github.com/RaoulLuque/treewidth-heuristic-clique-graph-benchmarks"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.6.4"
treewidth_heuristic_clique_graph = { path = "/home/raoul/Documents/Produktivität/RWTH/Semester_6/Bachelorarbeit/treewidth-heuristic-clique-graph"}
benchmark-suites = { path = "../benchmark-suites"}
dimacs_petgraph_parser = { git = "https://github.com/RaoulLuque/dimacs-petgraph-parser" }
env_logger = "0.11.3"
rustc-hash = { git = "https://github.com/rust-lang/rustc-hash"}
chrono = "0.4.38"
csv = "1.3.0"