[package]
name = "k-tree-benchmarks"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["Raoul Luque <raoulsluque@gmail.com>"]
description = "Benchmarks for a heuristic for calculating an upper bound on treewidth of graphs using clique-graphs using partial k trees"
repository = "https://github.com/RaoulLuque/treewidth-heuristic-clique-graph-benchmarks"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.6.4"
treewidth-heuristic-using-clique-graphs = { path = "/home/raoul/Documents/Produktivität/RWTH/Semester_6/Bachelorarbeit/treewidth-heuristic-using-clique-graphs"}
rand = "0.8.5"
rustc-hash = { git = "https://github.com/rust-lang/rustc-hash"}
chrono = "0.4.38"
csv = "1.3.0"
benchmark-suites = { path = "../benchmark-suites"}
greedy-degree-fill-in-heuristic = { path = "../greedy-degree-fill-in-heuristic"}
env_logger = "0.11.3"
log = "0.4.21"
tokio = "1.38.0"